--- a/index.html
+++ b/index.html
@@ -242,9 +242,9 @@
   <section id="contact" class="fade-in">
     <h2>Contact Me</h2>
     <div class="contact-box">
-      <p>Email: zaidan@example.com</p>
-      <p>LinkedIn: linkedin.com/in/zaidan</p>
-      <p>WhatsApp: 08xxxxxxxxxx</p>
+      <p>Email: zaidanfahmi57@gmail.com</p>
+      <p>LinkedIn: linkedin.com/in/zaidanfahmiabdurrasyid</p>
+      <p>WhatsApp: 085710046572</p>
     </div>
   </section>
 
@@ -254,3 +254,4 @@
 
 </body>
 </html>
+
